# Newser

./: .env-template  Dockerfile  LICENSE  README.md  azure-pipelines.yml  pyproject.toml  pytest.ini  requirements.txt
data/: newser.db
src/: database.py  newser.py
src/db/: __init__.py  database.py
tests/: tests.py
