[tool.poetry]
name = "discord-news-bot"
version = "0.1.0"
description = "Bot Discordowy pobierający i redagujący wiadomości z NewsData.io"
authors = ["Jakub Kamionka, kuba@kamionka.eu"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
discord.py = "^2.3.2"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
google-generativeai = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
